--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1>SRFI 55: require-extension</h1>
     <p class="authors">by Felix L. Winkelmann and D.C. Frost</p>
-    <p class="status">status: <em>final</em> (2004/11/5)</p>
+    <p class="status">status: <em>final</em> (2004-11-05)</p>
 
     <ul class="info">
       <li><a href="srfi-55.html">The SRFI Document</a></li>
