--- a/srfi-55.html
+++ b/srfi-55.html
@@ -18,9 +18,9 @@
 <p> Felix L. Winkelmann and D.C. Frost
 
 <H1>Status</H1>
-This SRFI is currently in ``final'' status.  To see an explanation of each status that a SRFI can hold, see <A HREF="https://srfi.schemers.org/srfi-process.html">here</A>.
-You can access the discussion via <A HREF=mail-archive/maillist.html>the archive of the mailing list</A>.
-<P><UL>
+
+<p>This SRFI is currently in <em>final</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+55+at+srfi+dotschemers+dot+org">srfi-55@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-55">archive</a>.</p>
+<UL>
 <LI>Received: <a href="https://srfi.schemers.org/srfi-55/srfi-55-1.2.html">2004-05-03</a>
 <LI>Draft: 2004-06-07--2004-08-05
 <LI>Revised: <a href="https://srfi.schemers.org/srfi-55/srfi-55-1.3.html">2004-06-16</a>
