--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p class="authors">by Felix L. Winkelmann and D.C. Frost</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2004-11-05)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=features][Features]]</p>
 
     <ul class="info">
       <li><a href="srfi-55.html">The SRFI Document</a></li>
